# soapy

./: Cargo.toml  soapy.code-workspace
assets/: ETWStandard.wsdl  ETWStandard.xsd  ETWStandard_2.xsd  NetcupWSEndUser.wsdl  WSEndUser.xsd
assets/replies/: VServerInformation.xml  Version.xml  VersionError.xml
assets/requests/etw/: getVersion.xml
assets/requests/netcup/: getVServerInformation.xml  getVServers.xml
src/: error.rs  generator.rs  lib.rs
src/generator/: wsdl.rs  xsd.rs
